style.css
html, body, div, span, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, a, img,
b, u, i, center,ol, ul, li,
fieldset, form, label, legend, caption,
article, aside, details, 
figure, figcaption, footer, header, 
menu, nav, output, section, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, h1, h2, h3, h4, h5, h6, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
	font-family: 'Oxygen', sans-serif;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Layout Properties (position, float, clear, display)
Box Model Properties (width, height, margin, padding)
Visual Properties (color, background, border, box-shadow)
Typography Properties (font-size, font-family, text-align, text-transform)
Misc Properties (cursor, overflow, z-index) */

/* LBV styling */
header, .search, .results__info, .result {
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column; 
}

header {
	margin: 15px auto;
	padding: 15px 5px;
	width: 90%;
	background-color: #126767;
}

h1 {
	color: #fff;
	font-size: 1.75rem;
}

.search {
	width: 100%;
	margin-top: 30px;
	font-size: 1.15rem;
}

.search__title {
	color: #123D67;
}

.search__input {
	margin-top: 10px;
	margin-right: 5px;
	padding: 5px 30px 5px 5px;
	border-radius: 3px;
	font-size: .75em;
}

.search__button {
	position: relative;
	right: -25px;
	padding: 5px;
	margin-left: -15px;
	width: 50px;
	border: 1px solid #373D42;
	border-radius: 3px;
	font-size: .75em;
	background-color: #126767;
	color: white;
	cursor: pointer;
	-webkit-transition-duration: 0.4s; /* Safari */
    transition-duration: 0.4s;
}

.search__button:hover {
	background-color: #123D67;
}

.search__form {
	position: relative;
	width: 300px;
}

.search__clear {
	position: relative;
	top: 2px;
	left: -22px;
	display: none;
	width: 30px;
	margin-left: -15px;
	margin-right: -20px;
	text-align: center;
	line-height: 1.2em;
	color: #595959;
	cursor: pointer;
}

.results {
	margin-top: 30px;
}

.results__currentQuery, .results__total {
	margin-bottom: 10px;
	font-size: 1.25em;
	color: #123D67;
}

.results__container {
	display: flex;
	align-items: flex-start;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: space-around;
	margin-top: 20px;
	padding: 10px 10px;
}

.result {
	padding: 10px;
	width: 350px;
	height: 225px;
	margin: 15px 10px;
}

.result--video {
	border: 2px solid #FF0000;
}

.result--channel {
	border: 2px solid #CCD216;
}

.result--playlist {
	border: 2px solid #0D9D03;
}

.result--img {
	display: block;
	margin: 10px auto;
	width: 55%;
}

.buttons {
	display: flex;
	justify-content: center;
}

.buttons__prev, .buttons__next {
	display: none;
	margin-top: 10px;
	font-size: 1.1em;
}

.buttons__prev {
	margin-right: 20px;
}

a:link {
	text-decoration: none;
	color: blue;
}

a:visited {
	color: #800073;
}

a:hover {
	color: #087BC4;
}


@media screen and (min-width: 679px) {
	.search__clear-mobile {
		display: none;
	}
}

@media screen and (max-width: 678px) {
	.search {
		width: 95%;
		margin: 30px auto;
		font-size: 1rem;
	}
	
	header {
		width: 100%;
	}
	.search__button {
		margin-left: -20px;
	}
}

